[tool.poetry]
name = "hn-prospector"
version = "1.0.0"
description = "CLI tool to find and rank HN users from a thread."
authors = ["Kai ngominhkhoa2006@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["rich"], version = "^0.12.3"}
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.20250516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hn-prospector = "hn_prospector.main:app"